# koki-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GUIDE.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  run_polling.py  run_whatsapp.py  templates.py
.github/workflows/: deploy.yml
app/: config.py  keyboards.py  main.py  middleware.py  states.py  templates.py
app/handlers/: fallback.py  group.py  private.py  (+2 more)
callbacks/: appeal.py  card.py  menu.py  onboarding.py  payment.py  reissue.py  video.py
di/: provider.py
filters/: roles.py
handlers/: appeal.py  card.py  menu.py  onboarding.py  payment.py  reissue.py
keyboards/: appeal.py  card.py  menu.py  onboarding.py  payment.py  reissue.py  video.py
migrations/: 001_kok_schema.sql  002_create_user_rpc.sql  003_appeal_count.sql  004_manager_role.sql  005_payment_receipts.sql  006_appeal_deadline.sql
models/: commands_message.py  course.py  document.py  enums.py  intake_log.py  manager.py  ocr.py  owner.py  payment_receipt.py  reissue.py  user.py  video_result.py  whatsapp.py
repositories/: commands_messages_repository.py  course_repository.py  document_repository.py  intake_log_repository.py  manager_repository.py  owner_repository.py  payment_receipt_repository.py  user_repository.py
scripts/: run_related_tests.sh
services/: add_service.py  dev_mode_service.py  gemini_service.py  ocr_service.py  video_service.py  whatsapp_client.py
states/: add.py  appeal.py  onboarding.py  payment.py
tests/: conftest.py  test_commands messages service.py  test_course_service.py  test_dashboard_service.py  test_fallback.py  test_format.py  test_gemini_service.py  test_handlers_group.py  test_handlers_private.py  test_handlers_video.py  test_intake_logs_service.py  test_keyboards.py  test_logger.py  test_manager_service.py  test_middleware.py  test_states.py  test_stats_messages_service.py  test_tasks.py  test_templates.py  test_time_utils.py  test_topic_service.py  test_user_service.py
topic_access/: access.py  callback_middleware.py  message_middleware.py  service.py  tracked_bot.py
utils/: image.py  message.py  telegram_error_handler.py  telegram_retry.py  time.py  validators.py
whatsapp/: app.py
workers/: dedup.py  scheduler.py
(+107 files in other folders)
