[project]
name = "malika-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "anthropic>=0.75.0",
    "fastapi>=0.127.0",
    "freezegun>=1.5.5",
    "google-genai>=1.56.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "supabase>=2.27.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
