[project]
name = "malika-bot"
version = "0.1.0"
description = "Telegram bot for 21-day contraceptive program"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "google-genai>=1.56.0",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "supabase>=2.27.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
