[project]
name = "koki-bot"
version = "0.1.0"
description = "Telegram bot for 21-day contraceptive program"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "dishka>=1.5.0",
    "google-genai>=1.56.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "sentry-sdk>=2.0.0",
    "supabase>=2.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
]
